# router/router.go
@@ -57,11 +57,12 @@ func NewServer(h Handlers) *echo.Echo {
 			apiComments.PUT("/:transactionID", h.PutTransaction)
 		}
 
-		apiFiles := api.Group("/files", h.CheckLoginMiddleware)
+		apiFiles := api.Group("/files")
 		{
 			apiFiles.POST("", h.PostFile)
 			apiFiles.GET("/:fileID", h.GetFile)
 			apiFiles.DELETE("/:fileID", h.DeleteFile)
+			apiFiles.GET("/:fileID/meta", h.GetFileMeta)
 		}
 
 		apiTags := api.Group("/tags", h.CheckLoginMiddleware)
